# java-c-interfacing

./: .gitignore  Frontend.java  LICENSE  README.md  run
autogen-java/: Cargo.toml
autogen-java-demo/: .gitignore  Frontend.java  run
autogen-java/src/: jni.rs  jni_ext.rs  lib.rs  macros.rs
backend-src/: backend.c  backend.cxx  backend.h
hand-coded-csharp/: Frontend.cs  NativeBindings.cs
hand-coded-java/: Frontend.java  run
hand-coded-java/bindings/: AppInfo.java  Callback.java  Callback_AppInfo.java  Callback_Key.java  Callback_String.java  Callback_array_Key.java  Callback_array_int.java  Callback_int.java  Callback_int_String_Key.java  FfiResult.java  Key.java  NativeBindings.java  frontend.cxx
hand-coded-java/bindings/rust/: Cargo.toml  build.rs
hand-coded-jni/: Frontend.java
hand-coded-jni/backend-src/: backend.c
jni-src/: frontend.c  jni_utils.h
stupid-c-header-parsing/: Cargo.toml  README.md  backend_8h.xml  sample-doxygen-cfg
stupid-c-header-parsing/src/: main.rs
swig-gen/: Frontend.java  run  swig_ifc.i
swig-gen-directors/: Frontend.java
swig-gen-directors/backend-src/native-frontend/: main.c
swig-gen-typemaps/: Callback.java  Frontend.java  jni_boilerplate.h  run  swig_ifc.i
swig-gen-typemaps/backend-src/: backend.c  backend.cxx  backend.h
swig-gen-typemaps/callbacks/: Callback0.java  CallbackInt.java
swig-gen-typemaps/csharp/: Frontend.cs  run  swig_ifc.i
swig-gen-typemaps/java/: swig_ifc.i
swig-gen-typemaps/java/callbacks/: Callback1.java  CallbackIntStringKey.java  (+1 more)
swig-gen/backend-src/: backend.c  backend.h
(+2 files in other folders)
